--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/static/css/index.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-...</code>" crossorigin="anonymous">
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha384-...</code>"
+      crossorigin="anonymous"
+    />
+
     <title>AAA</title>
     <link rel="title icon" href="/static/images/head.png" type="image/png" />
   </head>
@@ -22,7 +27,7 @@
       <div>
         <img
           src="/static/images/emblem.png"
-         id="emblem"
+          id="emblem"
           style="width: 90px; height: 90px"
         />
       </div>
@@ -44,24 +49,25 @@
 
         <span id="spanTime"></span>
       </div>
-     
+
       <div id="about-link">
         <select
           class="nav-link"
           name="languages"
           style="background-color: #1e2257; color: white"
         >
-          <option value="zh">English</option>
-          <option value="es">Assamese</option>
-          <option value="en">Bengali</option>
-          <option value="hi">Gujrati</option>
-          <option value="ar">Kannada</option>
-          <option value="pt">Malayalam</option>
-          <option value="bn">Marathi</option>
-          <option value="ru">Odia</option>
-          <option value="ja">Punjabi</option>
-          <option value="pa">Telugu</option>
-          <option value="pa">Tamil</option>
+          <option value="en">English</option>
+          <option value="as">Assamese</option>
+          <option value="hi">Hindi</option>
+          <option value="bn">Bengali</option>
+          <option value="gu">Gujrati</option>
+          <option value="kn">Kannada</option>
+          <option value="ml">Malayalam</option>
+          <option value="mr">Marathi</option>
+          <option value="or">Odia</option>
+          <option value="pa">Punjabi</option>
+          <option value="ta">Tamil</option>
+          <option value="te">Telugu</option>
         </select>
         <a href="#" class="nav-link">Home</a>
         <a href="#" class="nav-link">Courses</a>
@@ -81,212 +87,247 @@
     </section>
     <div class="carousel">
       <div class="carousel-inner">
-          <div class="carousel-item">
-              <img src="/static/images/aicte.jpg" style="width: 100%;height:100%;" alt="Slide 1">
-          </div>
-          <div class="carousel-item">
-              <img src="/static/images/main_content.png" alt="Slide 2">
-          </div>
-          <div class="carousel-item">
-              <img src="/static/images/carousel.jpg" alt="Slide 3">
-          </div>
-      </div>
-  </div>
-  <div class="wrapper">
-
-    
-  
-    <div class="cards">
-  
-      <div class=" card [ is-collapsed ] ">
-        <div class="card__inner [ js-expander ]">
-          <span>Online Application</span>
-          <i class="fa fa-folder-o"></i>
+        <div class="carousel-item">
+          <img
+            src="/static/images/aicte.jpg"
+            style="width: 100%; height: 100%"
+            alt="Slide 1"
+          />
         </div>
-        <div class="card__expander">
-          <i class="fa fa-close [ js-collapser ]"></i>
-          Expander
+        <div class="carousel-item">
+          <img src="/static/images/main_content.png" alt="Slide 2" />
+        </div>
+        <div class="carousel-item">
+          <img src="/static/images/carousel.jpg" alt="Slide 3" />
         </div>
       </div>
-  
-      <div class=" card [ is-collapsed ] ">
-        <div class="card__inner [ js-expander ]">
-          <span>Recommendations</span>
-          <i class="fa fa-folder-o"></i>
-        </div>
-        <div class="card__expander">
-          <i class="fa fa-close [ js-collapser ]"></i>
-          Expander
-        </div>
-      </div>
-  
-      <div class=" card [ is-collapsed ] ">
-        <div class="card__inner [ js-expander ]">
-          <span>Rescrutiny</span>
-          <i class="fa fa-folder-o"></i>
-        </div>
-        <div class="card__expander">
-          <i class="fa fa-close [ js-collapser ]"></i>
-          Expander
-        </div>
-      </div>
-  
-      <div class=" card [ is-collapsed ] ">
-        <div class="card__inner [ js-expander ]">
-          <span>Regional Commitee</span>
-          <i class="fa fa-folder-o"></i>
-        </div>
-        <div class="card__expander">
-          <i class="fa fa-close [ js-collapser ]"></i>
-          Expander
-        </div>
-      </div>
-  
-      <div class=" card [ is-collapsed ] ">
-        <div class="card__inner [ js-expander ]">
-          <span>Executive Commitee</span>
-          <i class="fa fa-folder-o"></i>
-        </div>
-        <div class="card__expander">
-          <i class="fa fa-close [ js-collapser ]"></i>
-          Expander
-        </div>
-      </div>
-  
-      <div class=" card [ is-collapsed ] ">
-        <div class="card__inner [ js-expander ]">
-          <span>LOA</span>
-          <i class="fa fa-folder-o"></i>
-        </div>
-        <div class="card__expander">
-          <i class="fa fa-close [ js-collapser ]"></i>
-          Expander
-        </div>
-      </div>
-  
-      <div class=" card [ is-collapsed ] ">
-        <div class="card__inner [ js-expander ]">
-          <span>LOR</span>
-          <i class="fa fa-folder-o"></i>
-        </div>
-        <div class="card__expander">
-          <i class="fa fa-close [ js-collapser ]"></i>
-          Expander
-        </div>
-      </div>
-  
-      <div class=" card [ is-collapsed ] ">
-        <div class="card__inner [ js-expander ]">
-          <span>SAC</span>
-          <i class="fa fa-folder-o"></i>
-        </div>
-        <div class="card__expander">
-          <i class="fa fa-close [ js-collapser ]"></i>
-          Expander
-        </div>
-      </div>
-  
-      <div class=" card [ is-collapsed ] ">
-        <div class="card__inner [ js-expander ]">
-          <span>Validity</span>
-          <i class="fa fa-folder-o"></i>
-        </div>
-        <div class="card__expander">
-          <i class="fa fa-close [ js-collapser ]"></i>
-          Expander
-        </div> 
-        
-      </div>
-  
     </div>
-  
-  </div>
-  
-  <main>
-    <h1 class="faq-heading" style="text-align: center;">Frequently Asked Questions</h1>
-    <section class="faq-container">
+    <div class="wrapper">
+      <div class="cards">
+        <div class="card [ is-collapsed ]">
+          <div class="card__inner [ js-expander ]">
+            <span>Online Application</span>
+            <i class="fa fa-folder-o"></i>
+          </div>
+          <div class="card__expander">
+            <i class="fa fa-close [ js-collapser ]"></i>
+            Expander
+          </div>
+        </div>
+
+        <div class="card [ is-collapsed ]">
+          <div class="card__inner [ js-expander ]">
+            <span>Recommendations</span>
+            <i class="fa fa-folder-o"></i>
+          </div>
+          <div class="card__expander">
+            <i class="fa fa-close [ js-collapser ]"></i>
+            Expander
+          </div>
+        </div>
+
+        <div class="card [ is-collapsed ]">
+          <div class="card__inner [ js-expander ]">
+            <span>Rescrutiny</span>
+            <i class="fa fa-folder-o"></i>
+          </div>
+          <div class="card__expander">
+            <i class="fa fa-close [ js-collapser ]"></i>
+            Expander
+          </div>
+        </div>
+
+        <div class="card [ is-collapsed ]">
+          <div class="card__inner [ js-expander ]">
+            <span>Regional Commitee</span>
+            <i class="fa fa-folder-o"></i>
+          </div>
+          <div class="card__expander">
+            <i class="fa fa-close [ js-collapser ]"></i>
+            Expander
+          </div>
+        </div>
+
+        <div class="card [ is-collapsed ]">
+          <div class="card__inner [ js-expander ]">
+            <span>Executive Commitee</span>
+            <i class="fa fa-folder-o"></i>
+          </div>
+          <div class="card__expander">
+            <i class="fa fa-close [ js-collapser ]"></i>
+            Expander
+          </div>
+        </div>
+
+        <div class="card [ is-collapsed ]">
+          <div class="card__inner [ js-expander ]">
+            <span>LOA</span>
+            <i class="fa fa-folder-o"></i>
+          </div>
+          <div class="card__expander">
+            <i class="fa fa-close [ js-collapser ]"></i>
+            Expander
+          </div>
+        </div>
+
+        <div class="card [ is-collapsed ]">
+          <div class="card__inner [ js-expander ]">
+            <span>LOR</span>
+            <i class="fa fa-folder-o"></i>
+          </div>
+          <div class="card__expander">
+            <i class="fa fa-close [ js-collapser ]"></i>
+            Expander
+          </div>
+        </div>
+
+        <div class="card [ is-collapsed ]">
+          <div class="card__inner [ js-expander ]">
+            <span>SAC</span>
+            <i class="fa fa-folder-o"></i>
+          </div>
+          <div class="card__expander">
+            <i class="fa fa-close [ js-collapser ]"></i>
+            Expander
+          </div>
+        </div>
+
+        <div class="card [ is-collapsed ]">
+          <div class="card__inner [ js-expander ]">
+            <span>Validity</span>
+            <i class="fa fa-folder-o"></i>
+          </div>
+          <div class="card__expander">
+            <i class="fa fa-close [ js-collapser ]"></i>
+            Expander
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <main>
+      <h1 class="faq-heading" style="text-align: center">
+        Frequently Asked Questions
+      </h1>
+      <section class="faq-container">
         <div class="faq-one">
-            <!-- faq question -->
-            <h1 class="faq-page">We have 5 Diploma Courses, Can we apply for conversion of Two Diploma Courses only into
-              Degree Courses? </h1>
-            <!-- faq answer -->
-            <div class="faq-body">
-                <p>No. Partial conversion of Levels is not permitted. </p>
-            </div>
+          <!-- faq question -->
+          <h1 class="faq-page">
+            We have 5 Diploma Courses, Can we apply for conversion of Two
+            Diploma Courses only into Degree Courses?
+          </h1>
+          <!-- faq answer -->
+          <div class="faq-body">
+            <p>No. Partial conversion of Levels is not permitted.</p>
+          </div>
         </div>
-        <hr class="hr-line">
+        <hr class="hr-line" />
         <div class="faq-two">
-            <!-- faq question -->
-            <h1 class="faq-page">Can I apply for closure of the existing Institution and open a new Institution at the same
-              premises?</h1>
-            <!-- faq answer -->
-            <div class="faq-body">
-                <p> Yes. If the Scrutiny Committee found the application for closure is in order and recommend
-                  for the closure of the existing Programme(s), then the processing for new Institution for the
-                  new Programme (except Engineering and Technology/ Pharmacy) shall be considered. </p>
-            </div>
+          <!-- faq question -->
+          <h1 class="faq-page">
+            Can I apply for closure of the existing Institution and open a new
+            Institution at the same premises?
+          </h1>
+          <!-- faq answer -->
+          <div class="faq-body">
+            <p>
+              Yes. If the Scrutiny Committee found the application for closure
+              is in order and recommend for the closure of the existing
+              Programme(s), then the processing for new Institution for the new
+              Programme (except Engineering and Technology/ Pharmacy) shall be
+              considered.
+            </p>
+          </div>
         </div>
-        <hr class="hr-line">
+        <hr class="hr-line" />
         <div class="faq-three">
-            <!-- faq question -->
-<h1 class="faq-page">Whether an Institution offering MBA could be merged with an Institution offering
-  Engineering Courses? </h1>
-            <!-- faq answer -->
-            <div class="faq-body">
-                <p>Yes, if both the Institutions are run by the same Trust/ Society/ Company. </p>
-            </div>
+          <!-- faq question -->
+          <h1 class="faq-page">
+            Whether an Institution offering MBA could be merged with an
+            Institution offering Engineering Courses?
+          </h1>
+          <!-- faq answer -->
+          <div class="faq-body">
+            <p>
+              Yes, if both the Institutions are run by the same Trust/ Society/
+              Company.
+            </p>
+          </div>
         </div>
-        <hr class="hr-line">
+        <hr class="hr-line" />
         <div class="faq-four">
-            <!-- faq question -->
-<h1 class="faq-page">Name of our affiliating University does not appear in the affiliating University drop down.</h1>
-            <!-- faq answer -->
-            <div class="faq-body">
-                <p>  Contact Approval Bureau for inclusion of the University name in the portal. Send an email
-                  of Institution representation on the Letter head to helpdeskab@aicte-india.org.  </p>
-            </div>
+          <!-- faq question -->
+          <h1 class="faq-page">
+            Name of our affiliating University does not appear in the
+            affiliating University drop down.
+          </h1>
+          <!-- faq answer -->
+          <div class="faq-body">
+            <p>
+              Contact Approval Bureau for inclusion of the University name in
+              the portal. Send an email of Institution representation on the
+              Letter head to helpdeskab@aicte-india.org.
+            </p>
+          </div>
         </div>
-        <hr class="hr-line">
+        <hr class="hr-line" />
         <div class="faq-five">
-            <!-- faq question -->
-<h1 class="faq-page">For Under Graduate Degree Programme in Engineering Technology, whether Diploma
-  qualified students will also be considered on par with students passed 10+2 examination? </h1>
-            <!-- faq answer -->
-            <div class="faq-body">
-                <p> Students passed Diploma (in Engineering and Technology) will be considered, subject to
-                  vacancies in the First Year, in case the vacancies at lateral entry are exhausted.</p>
-            </div>
+          <!-- faq question -->
+          <h1 class="faq-page">
+            For Under Graduate Degree Programme in Engineering Technology,
+            whether Diploma qualified students will also be considered on par
+            with students passed 10+2 examination?
+          </h1>
+          <!-- faq answer -->
+          <div class="faq-body">
+            <p>
+              Students passed Diploma (in Engineering and Technology) will be
+              considered, subject to vacancies in the First Year, in case the
+              vacancies at lateral entry are exhausted.
+            </p>
+          </div>
         </div>
-        <hr class="hr-line">
+        <hr class="hr-line" />
         <div class="faq-six">
-            <!-- faq question -->
-<h1 class="faq-page">How to get a copy of Corrigendum EoA / Corrigendum LoA in case of corrections made in
-  EoA or LoA from AICTE Web Portal? </h1>
-            <!-- faq answer -->
-            <div class="faq-body">
-                <p> Institution need to check drop down menu and click on ‘Corrigendum EoA’ or ‘Corrigendum
-                  LoA’ as the case may be, instead of clicking on ‘EoA’ or ‘LoA’ menu.  </p>
-            </div>
+          <!-- faq question -->
+          <h1 class="faq-page">
+            How to get a copy of Corrigendum EoA / Corrigendum LoA in case of
+            corrections made in EoA or LoA from AICTE Web Portal?
+          </h1>
+          <!-- faq answer -->
+          <div class="faq-body">
+            <p>
+              Institution need to check drop down menu and click on ‘Corrigendum
+              EoA’ or ‘Corrigendum LoA’ as the case may be, instead of clicking
+              on ‘EoA’ or ‘LoA’ menu.
+            </p>
+          </div>
         </div>
-    </section>
-</main>
-<div class="chatboy-icon" id="chatboy-icon" onclick="toggleChatbox()">
-  <img src="/static/images/chatbot.png" alt="Chatboy Icon" width="50px" height="50px">
-</div>
+      </section>
+    </main>
+    <div class="chatboy-icon" id="chatboy-icon" onclick="toggleChatbox()">
+      <img
+        src="/static/images/chatbot.png"
+        alt="Chatboy Icon"
+        width="50px"
+        height="50px"
+      />
+    </div>
 
-<!-- Chatbox -->
-<div class="chatbox" id="chatbox">
-  <!-- Your chatbox content goes here -->
-  <p>User: Hello! I'm IBot.</p>
-  <div class="input-container">
-    <input type="text" placeholder="Type your message" >
-    <button onclick="sendMessage()"><i class="fas fa-paper-plane"></i></button>
-    <div class="loading-dots"></div>
-  </div>
-  <!-- Close button -->
-  <span class="close-btn" onclick="toggleChatbox()">X</span>
-</div>
-
+    <!-- Chatbox -->
+    <div class="chatbox" id="chatbox">
+      <!-- Your chatbox content goes here -->
+      <p>User: Hello! I'm IBot.</p>
+      <div class="input-container">
+        <input type="text" placeholder="Type your message" />
+        <button onclick="sendMessage()">
+          <i class="fas fa-paper-plane"></i>
+        </button>
+        <div class="loading-dots"></div>
+      </div>
+      <!-- Close button -->
+      <span class="close-btn" onclick="toggleChatbox()">X</span>
+    </div>
 
     <footer class="foot">
       <div>
@@ -352,6 +393,5 @@
       </div>
     </footer>
     <script src="/static/js/index.js"></script>
-   
   </body>
 </html>
