--- a/templates/index.html
+++ b/templates/index.html
@@ -69,8 +69,10 @@
           <option value="ta">Tamil</option>
           <option value="te">Telugu</option>
         </select>
-
-        <img class="flag" src="/static/images/flag.jpg" />
+        <!-- 
+        <div class="flag">
+          <img src="/static/images/flag.jpg" />
+        </div> -->
         <a href="#" class="nav-link">Home</a>
         <a href="#" class="nav-link">Courses</a>
         <a href="https://www.aicte-india.org/bulletins" class="nav-link"
@@ -97,10 +99,10 @@
           />
         </div>
         <div class="carousel-item">
-          <img src="/static/images/main_content.png" alt="Slide 2" />
+          <img src="/static/images/carousel.jpg" alt="Slide 2" />
         </div>
         <div class="carousel-item">
-          <img src="/static/images/carousel.jpg" alt="Slide 3" />
+          <img src="/static/images/main_content.png" alt="Slide 3" />
         </div>
       </div>
     </div>
