completed backend for login and registrations

--- a/templates/changep.html
+++ b/templates/changep.html
@@ -54,6 +54,6 @@
       <button onclick="sendOTP()" class="btn">Send OTP</button>
     </div>
 
-    <script src="/static/js/forgot.js"></script>
+    <script src="/static/js/changep.js"></script>
   </body>
 </html>
