final changes from ansh before 1 checkpoint

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,9 +72,9 @@
         <div class="flag">
           <img src="/static/images/flag.jpg" />
         </div> -->
-        <a href="#" class="nav-link">Home</a>
-        <a href="#" class="nav-link">Courses</a>
-        <a href="https://www.aicte-india.org/bulletins" class="nav-link"
+        <a href="#" class="nav-link" data-translate>Home</a>
+        <a href="#" class="nav-link" data-translate>Courses</a>
+        <a href="https://www.aicte-india.org/bulletins" class="nav-link" data-translate
           >News</a
         >
         <!-- <a
@@ -82,8 +82,8 @@
           class="nav-link"
           >Opppurtunities</a
         > -->
-        <a href="#" class="nav-link">Fee</a>
-        <a href="https://www.aicte-india.org/about-us/history" class="nav-link"
+        <a href="#" class="nav-link" data-translate>Fee</a>
+        <a href="https://www.aicte-india.org/about-us/history" class="nav-link" data-translate
           >About</a
         >
       </div>
@@ -109,10 +109,21 @@
       <div class="cards">
         <div class="card [ is-collapsed ]">
           <div class="card__inner [ js-expander ]">
-            <span>Online Application</span>
+            <span data-translate>Online Application</span>
             <i class="fa fa-folder-o"></i>
           </div>
           <div class="card__expander">
+            <i class="fa fa-close [ js-collapser ]" data-translate></i>
+            Expander
+          </div>
+        </div>
+
+        <div class="card [ is-collapsed ]">
+          <div class="card__inner [ js-expander ]">
+            <span data-translate>Recommendations</span>
+            <i class="fa fa-folder-o"></i>
+          </div>
+          <div class="card__expander" data-translate>
             <i class="fa fa-close [ js-collapser ]"></i>
             Expander
           </div>
@@ -120,10 +131,10 @@
 
         <div class="card [ is-collapsed ]">
           <div class="card__inner [ js-expander ]">
-            <span>Recommendations</span>
+            <span data-translate>Rescrutiny</span>
             <i class="fa fa-folder-o"></i>
           </div>
-          <div class="card__expander">
+          <div class="card__expander" data-translate>
             <i class="fa fa-close [ js-collapser ]"></i>
             Expander
           </div>
@@ -131,10 +142,10 @@
 
         <div class="card [ is-collapsed ]">
           <div class="card__inner [ js-expander ]">
-            <span>Rescrutiny</span>
+            <span data-translate>Regional Commitee</span>
             <i class="fa fa-folder-o"></i>
           </div>
-          <div class="card__expander">
+          <div class="card__expander" data-translate>
             <i class="fa fa-close [ js-collapser ]"></i>
             Expander
           </div>
@@ -142,10 +153,10 @@
 
         <div class="card [ is-collapsed ]">
           <div class="card__inner [ js-expander ]">
-            <span>Regional Commitee</span>
+            <span data-translate>Executive Commitee</span>
             <i class="fa fa-folder-o"></i>
           </div>
-          <div class="card__expander">
+          <div class="card__expander" data-translate>
             <i class="fa fa-close [ js-collapser ]"></i>
             Expander
           </div>
@@ -153,10 +164,10 @@
 
         <div class="card [ is-collapsed ]">
           <div class="card__inner [ js-expander ]">
-            <span>Executive Commitee</span>
+            <span data-translate>LOA</span>
             <i class="fa fa-folder-o"></i>
           </div>
-          <div class="card__expander">
+          <div class="card__expander" data-translate>
             <i class="fa fa-close [ js-collapser ]"></i>
             Expander
           </div>
@@ -164,10 +175,10 @@
 
         <div class="card [ is-collapsed ]">
           <div class="card__inner [ js-expander ]">
-            <span>LOA</span>
+            <span data-translate>LOR</span>
             <i class="fa fa-folder-o"></i>
           </div>
-          <div class="card__expander">
+          <div class="card__expander" data-translate>
             <i class="fa fa-close [ js-collapser ]"></i>
             Expander
           </div>
@@ -175,10 +186,10 @@
 
         <div class="card [ is-collapsed ]">
           <div class="card__inner [ js-expander ]">
-            <span>LOR</span>
+            <span data-translate>SAC</span>
             <i class="fa fa-folder-o"></i>
           </div>
-          <div class="card__expander">
+          <div class="card__expander" data-translate>
             <i class="fa fa-close [ js-collapser ]"></i>
             Expander
           </div>
@@ -186,21 +197,10 @@
 
         <div class="card [ is-collapsed ]">
           <div class="card__inner [ js-expander ]">
-            <span>SAC</span>
+            <span data-translate>Validity</span>
             <i class="fa fa-folder-o"></i>
           </div>
-          <div class="card__expander">
-            <i class="fa fa-close [ js-collapser ]"></i>
-            Expander
-          </div>
-        </div>
-
-        <div class="card [ is-collapsed ]">
-          <div class="card__inner [ js-expander ]">
-            <span>Validity</span>
-            <i class="fa fa-folder-o"></i>
-          </div>
-          <div class="card__expander">
+          <div class="card__expander" data-translate>
             <i class="fa fa-close [ js-collapser ]"></i>
             Expander
           </div>
@@ -209,30 +209,30 @@
     </div>
 
     <main>
-      <h1 class="faq-heading" style="text-align: center">
+      <h1 class="faq-heading" style="text-align: center" data-translate>
         Frequently Asked Questions
       </h1>
       <section class="faq-container">
         <div class="faq-one">
           <!-- faq question -->
-          <h1 class="faq-page">
+          <h1 class="faq-page" data-translate>
             We have 5 Diploma Courses, Can we apply for conversion of Two
             Diploma Courses only into Degree Courses?
           </h1>
           <!-- faq answer -->
-          <div class="faq-body">
+          <div class="faq-body" data-translate>
             <p>No. Partial conversion of Levels is not permitted.</p>
           </div>
         </div>
         <hr class="hr-line" />
         <div class="faq-two">
           <!-- faq question -->
-          <h1 class="faq-page">
+          <h1 class="faq-page" data-translate>
             Can I apply for closure of the existing Institution and open a new
             Institution at the same premises?
           </h1>
           <!-- faq answer -->
-          <div class="faq-body">
+          <div class="faq-body" data-translate>
             <p>
               Yes. If the Scrutiny Committee found the application for closure
               is in order and recommend for the closure of the existing
@@ -245,13 +245,13 @@
         <hr class="hr-line" />
         <div class="faq-three">
           <!-- faq question -->
-          <h1 class="faq-page">
+          <h1 class="faq-page" data-translate>
             Whether an Institution offering MBA could be merged with an
             Institution offering Engineering Courses?
           </h1>
           <!-- faq answer -->
           <div class="faq-body">
-            <p>
+            <p data-translate>
               Yes, if both the Institutions are run by the same Trust/ Society/
               Company.
             </p>
@@ -260,13 +260,13 @@
         <hr class="hr-line" />
         <div class="faq-four">
           <!-- faq question -->
-          <h1 class="faq-page">
+          <h1 class="faq-page" data-translate>
             Name of our affiliating University does not appear in the
             affiliating University drop down.
           </h1>
           <!-- faq answer -->
           <div class="faq-body">
-            <p>
+            <p data-translate>
               Contact Approval Bureau for inclusion of the University name in
               the portal. Send an email of Institution representation on the
               Letter head to helpdeskab@aicte-india.org.
@@ -276,14 +276,14 @@
         <hr class="hr-line" />
         <div class="faq-five">
           <!-- faq question -->
-          <h1 class="faq-page">
+          <h1 class="faq-page" data-translate>
             For Under Graduate Degree Programme in Engineering Technology,
             whether Diploma qualified students will also be considered on par
             with students passed 10+2 examination?
           </h1>
           <!-- faq answer -->
           <div class="faq-body">
-            <p>
+            <p data-translate>
               Students passed Diploma (in Engineering and Technology) will be
               considered, subject to vacancies in the First Year, in case the
               vacancies at lateral entry are exhausted.
@@ -293,13 +293,13 @@
         <hr class="hr-line" />
         <div class="faq-six">
           <!-- faq question -->
-          <h1 class="faq-page">
+          <h1 class="faq-page" data-translate> 
             How to get a copy of Corrigendum EoA / Corrigendum LoA in case of
             corrections made in EoA or LoA from AICTE Web Portal?
           </h1>
           <!-- faq answer -->
           <div class="faq-body">
-            <p>
+            <p data-translate>
               Institution need to check drop down menu and click on ‘Corrigendum
               EoA’ or ‘Corrigendum LoA’ as the case may be, instead of clicking
               on ‘EoA’ or ‘LoA’ menu.
@@ -337,33 +337,33 @@
         <div class="footer-menu">
           <ul>
             <li>
-              <a href="https://www.aicte-india.org/terms-conditions"
+              <a href="https://www.aicte-india.org/terms-conditions" data-translate
                 >Term of use</a
               >
             </li>
             <li>
-              <a href="https://www.aicte-india.org/privacy-policy"
+              <a href="https://www.aicte-india.org/privacy-policy" data-translate
                 >Privacy Policy</a
               >
             </li>
             <li>
-              <a href="https://www.aicte-india.org/grievance/rti"
+              <a href="https://www.aicte-india.org/grievance/rti" data-translate
                 >Right to Information</a
               >
             </li>
             <li>
-              <a href="https://www.aicte-india.org/reports/overview">Reports</a>
+              <a href="https://www.aicte-india.org/reports/overview" data-translate>Reports</a>
             </li>
             <li>
-              <a href="https://www.aicte-india.org/directory">Directory</a>
+              <a href="https://www.aicte-india.org/directory" data-translate>Directory</a>
             </li>
             <li>
-              <a href="https://www.aicte-india.org/centralized-support-system"
+              <a href="https://www.aicte-india.org/centralized-support-system" data-translate
                 >Centralized Support System</a
               >
             </li>
             <li>
-              <a href="https://www.aicte-india.org/survey-form"
+              <a href="https://www.aicte-india.org/survey-form" data-translate
                 >Reporting by Institutes</a
               >
             </li>
@@ -371,23 +371,23 @@
         </div>
         <div class="footer-menu">
           <ul>
-            <li><a href="#">Verify Institute Approval</a></li>
+            <li><a href="#" data-translate>Verify Institute Approval</a></li>
             <li>
-              <a href="https://www.aicte-india.org/contact">Contact us</a>
+              <a href="https://www.aicte-india.org/contact" data-translate>Contact us</a>
             </li>
-            <li><a href="#">AICTE Dashboard</a></li>
+            <li><a href="#" data-translate>AICTE Dashboard</a></li>
             <li>
-              <a href="https://www.aicte-india.org/CyberSecurity"
+              <a href="https://www.aicte-india.org/CyberSecurity" data-translate
                 >Cyber Security</a
               >
             </li>
             <li>
-              <a href="https://deemeduniversity.aicte-india.org/"
+              <a href="https://deemeduniversity.aicte-india.org/" data-translate
                 >Deemed University Result</a
               >
             </li>
             <li>
-              <a href="https://facilities.aicte-india.org/pgdm"
+              <a href="https://facilities.aicte-india.org/pgdm" data-translate
                 >PGDM Student Verification</a
               >
             </li>
