--- a/templates/index.html
+++ b/templates/index.html
@@ -49,12 +49,7 @@
       </div>
 
       <div id="about-link">
-        <select
-          id="language-select"
-          class="nav-link"
-          name="languages"
-          style="background-color: #1e2257; color: white"
-        >
+        <select id="language-select" class="nav-link" name="languages" style="background-color: #1e2257; color: white">
           <option value="en">English</option>
           <option value="as">Assamese</option>
           <option value="hi">Hindi</option>
@@ -68,24 +63,11 @@
           <option value="ta">Tamil</option>
           <option value="te">Telugu</option>
         </select>
-        <!-- 
-        <div class="flag">
-          <img src="/static/images/flag.jpg" />
-        </div> -->
         <a href="#" class="nav-link" data-translate>Home</a>
         <a href="#" class="nav-link" data-translate>Courses</a>
-        <a href="https://www.aicte-india.org/bulletins" class="nav-link" data-translate
-          >News</a
-        >
-        <!-- <a
-          href="https://www.aicte-india.org/opportunities/students/overview"
-          class="nav-link"
-          >Opppurtunities</a
-        > -->
+        <a href="https://www.aicte-india.org/bulletins" class="nav-link" data-translate>News</a>
         <a href="#" class="nav-link" data-translate>Fee</a>
-        <a href="https://www.aicte-india.org/about-us/history" class="nav-link" data-translate
-          >About</a
-        >
+        <a href="https://www.aicte-india.org/about-us/history" class="nav-link" data-translate>About</a>
       </div>
     </section>
     <div class="carousel">
