--- a/static/css/login.css
+++ b/static/css/login.css
@@ -331,3 +331,19 @@ input[type="checkbox"]:checked::before {
     width: 100%;
   }
 }
+
+#popup-window {
+  position: fixed;
+  width: 300px;
+  height: 200px;
+  background: white;
+  border: 1px solid black;
+  padding: 10px;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  display: none;
+}
