--- a/static/css/index.css
+++ b/static/css/index.css
@@ -244,6 +244,7 @@ main {
     align-items: center;
     justify-content: center;
     padding: 20px;
+    
 }
 .main
 {
@@ -285,7 +286,7 @@ main {
 
 .glass-card p {
     margin: 10px 0 0;
-    color: #ddd;
+    color: black;
     font-size: 1rem;
 }
 /* Chatbox Styles */
