--- a/static/css/login.css
+++ b/static/css/login.css
@@ -34,11 +34,11 @@ body {
   background-color: #f5f9ff;
   display: flex;
   justify-content: center;
-  background: url(/static/images/lg-bg.jpg);
+  /* background: url(/static/images/lg-bg.jpg);
   background-repeat: no-repeat;
   height: 100%;
   background-size: center;
-  background-size: cover;
+  background-size: cover; */
 }
 
 .infographics {
@@ -68,7 +68,7 @@ body {
 }
 
 .content-container {
-  background-color: hsla(0, 0%, 100%, 0.3);
+  /* background-color: #bd850434; */
   backdrop-filter: blur(30px);
   padding: 2rem;
   width: 80%;
@@ -81,15 +81,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.form-section {
-  background-color: hsla(0, 0%, 100%, 0.3);
-  backdrop-filter: blur(30px);
-  padding: 2rem;
-  width: 80%;
-  color: var(--text-dark);
-  border-radius: 4px;
-  border: 1px solid hsl(0 100% 100% / 0.3);
-}
+
 .content-container h1 {
   font-weight: 600;
   font-size: 2.5rem;
