--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      integrity="sha384-...</code>"
+      integrity="sha384-... </code>"
       crossorigin="anonymous"
     />
 
-    <title>AAA</title>
+    <title>EduSync</title>
     <link rel="title icon" href="/static/images/head.png" type="image/png" />
   </head>
   <body>
@@ -25,14 +25,14 @@
           src="/static/images/logo1.png"
           alt="Your Logo"
           id="logo"
-          style="width: 450px; height: 90px"
+          style="width: 300px; height: 60px"
         />
       </div>
       <div>
         <img 
-          src="/static/images/emblem.png"
+          src="/static/images/download.png"
          id="emblem"
-          style="width: 90px; height: 90px"
+          style="width: 150px; height: 70px"
         />
       </div>
       <div id="buttons">
@@ -88,118 +88,57 @@
           </div>
       </div>
   </div>
-  <br><br><br><br>
-  <div class="main">
-    <div class="container">
-  
-  
-    
-    <div class="glass-card">
+  <div class="inst">
+    <div class="containers">
+   <div class="card">
       
 
       
        <img src="/static/images/pmsc.png" >
+       <div class="text">
+        <p>New Institute</p>
+          
+      </div>
+       
       
        
-       <div class="text">
-          <p>Prime Minister's Special Scholarship Scheme(PMSS)</p>
-            
-        </div>
+      
         
     </div>
-    <div class="glass-card">
+    <div class="card">
       <img src="/static/images/rural.png" >
-      
-       
       <div class="text">
-         <p>Unnat Bharat Abhiyan in rural development process</p>
-           
-       </div>
-        
+        <p>Existing Institute</p>
+          
+      </div>
+      
+      
     </div>
-    <div class="glass-card">
+    <div class="card">
       <img src="/static/images/scholarship.png" >
+      <div class="text">
+        <p>Online and Distance Learning</p>
+          
+      </div>
       
-       
-       <div class="text">
-          <p>National <br>E-Scholarship</p>
-            
-        </div>
         
     </div>
-    <div class="glass-card">
+    <div class="card">
       <img src="/static/images/vidya.png" >
+      <div class="text">
+        <p>Online Learning</p>
+          
+      </div>
       
-       
-       <div class="text">
-          <p>Vidya Lakshmi</p>
-            
-        </div>
-        
-    </div>
-    <div class="glass-card">
-      <img src="/static/images/pragathi.png" >
-      
-       
-       <div class="text">
-          <p>Pragathi and Saksham</p>
-            
-        </div>
         
     </div>
     
-    </div>
-    <div class="container1">
     
-    
-        <div class="glass-card">
-          <img src="/static/images/innovation.png" >
-      
-       
-       <div class="text">
-          <p>India Innovation Initiative</p>
-            
-        </div>
-            
-        </div>
-        <div class="glass-card">
-          <img src="/static/images/women.png" >
-      
-       
-       <div class="text">
-          <p>Women Empowerment</p>
-            
-        </div>
-            
-        </div>
-        <div class="glass-card">
-          <img src="/static/images/disabled.png" >
-      
-       
-       <div class="text">
-          <p>Facilities for Differently Abled</p>
-            
-        </div>
-            
-        </div>
-        <div class="glass-card">
-          <img src="/static/images/Research.png" >
-      
-       
-       <div class="text">
-          <p>Reasearch Funds</p>
-            
-        </div>
-        
-        </div>
-        
-        
-        </div>
     </div>
   
-  <main>
+  <main class="curve">
     <h1 class="faq-heading" style="text-align: center;">Frequently Asked Questions</h1>
-    <section class="faq-container">
+    <section class="faq-container" >
         <div class="faq-one">
           <!-- faq question -->
           <h1 class="faq-page" data-translate>
@@ -278,13 +217,13 @@
           </div>
         </div>
         <hr class="hr-line" />
-        <div class="faq-six">
-          <!-- faq question -->
+        <!-- <div class="faq-six">
+        
           <h1 class="faq-page" data-translate> 
             How to get a copy of Corrigendum EoA / Corrigendum LoA in case of
             corrections made in EoA or LoA from AICTE Web Portal?
           </h1>
-          <!-- faq answer -->
+     
           <div class="faq-body">
             <p data-translate>
               Institution need to check drop down menu and click on ‘Corrigendum
@@ -292,7 +231,7 @@
               on ‘EoA’ or ‘LoA’ menu.
             </p>
           </div>
-        </div>
+        </div> -->
       </section>
     </main>
     <div class="chatboy-icon" id="chatboy-icon" onclick="toggleChatbox()">
@@ -303,6 +242,125 @@
         height="50px"
       />
     </div>
+    <br><br><br><br>
+  <div class="main">
+    <div class="container">
+  
+  
+    
+    <div class="glass-card">
+      
+
+      
+       <img src="/static/images/pmsc.png" >
+       <div class="vl"></div>
+
+      
+       
+       <div class="text">
+          <p>Prime Minister's Special Scholarship Scheme(PMSS)</p>
+            
+        </div>
+        
+    </div>
+    <div class="glass-card">
+      <img src="/static/images/rural.png" >
+      <div class="vl"></div>
+      
+       
+      <div class="text">
+         <p>Unnat Bharat Abhiyan in rural development process</p>
+           
+       </div>
+        
+    </div>
+    <div class="glass-card">
+      <img src="/static/images/scholarship.png" >
+      <div class="vl"></div>
+      
+       
+       <div class="text">
+          <p>National <br>E-Scholarship</p>
+            
+        </div>
+        
+    </div>
+    <div class="glass-card">
+      <img src="/static/images/vidya.png" >
+      <div class="vl"></div>
+      
+       
+       <div class="text">
+          <p>Vidya Lakshmi</p>
+            
+        </div>
+        
+    </div>
+    <div class="glass-card">
+      <img src="/static/images/pragathi.png" >
+      <div class="vl"></div>
+      
+       
+       <div class="text">
+          <p>Pragathi and Saksham</p>
+            
+        </div>
+        
+    </div>
+    
+    </div>
+    <div class="container1">
+    
+    
+        <div class="glass-card">
+          <img src="/static/images/innovation.png" >
+          <div class="vl"></div>
+      
+       
+       <div class="text">
+          <p>India Innovation Initiative</p>
+            
+        </div>
+            
+        </div>
+        <div class="glass-card">
+          <img src="/static/images/women.png" >
+          <div class="vl"></div>
+      
+       
+       <div class="text">
+          <p>Women Empowerment</p>
+            
+        </div>
+            
+        </div>
+        <div class="glass-card">
+          <img src="/static/images/disabled.png" >
+          <div class="vl"></div>
+      
+       
+       <div class="text">
+          <p>Facilities for Differently Abled</p>
+            
+        </div>
+            
+        </div>
+        <div class="glass-card">
+          <img src="/static/images/Research.png" >
+          <div class="vl"></div>
+      
+       
+       <div class="text">
+          <p>Reasearch Funds</p>
+            
+        </div>
+        
+        </div>
+        
+        
+        </div>
+    </div>
+  
 
     <!-- Chatbox -->
     <div class="chatbox" id="chatbox">
